<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GeoHabit!</string>
    <string name="app_name">GeoHabit</string>
    
    <!-- string utilisé dans main.xml -->
	<string name="authentification">Authentification</string>
	<string name="login">Identifiant</string>
	<string name="password">Mot de passe</string>
	
	<string name="pref_localizationService_title">Service de localisation</string>
	<string name="pref_localizationService_summary">Récupérer votre position géographique</string>
	<string name="pref_habit_precision_dialog_title">Précision d\'habitude</string>
	

	<string name="menu_settings">Paramètres</string>
	<string name="menu_exit">Quitter</string>
	<string name="pref_habit_precision_title">Précision d\'habitude</string>
	<string name="pref_habit_precision_summary">La précision sur la détection de votre habitude</string>
<string name="tab_tag_acceuil">Acceuil</string>
<string name="tab_tag_commerce">Commerce</string>
<string name="tab_tag_sport">Sport</string>
<string name="pref_refresh_freq_title">Fréquence de rechargement</string>
<string name="pref_refresh_freq_summary">La fréquence de requête des nouvelles informations</string>
<string name="pref_refresh_freq_diaglog_title">Fréquence de rechargement</string>
</resources>
